--- a/style.css
+++ b/style.css
@@ -1,41 +1,42 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #000000;
-  color: #f0f5fa;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	margin: 0;
+	padding: 0;
+	background-color: #000000;
+	color: #f0f5fa;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+		"Helvetica Neue", sans-serif;
+	overflow: hidden;
 }
 
 canvas {
-  background-color: #303030;
-  width: 100vw;
-  height: 100vh;
+	background-color: #303030;
+	width: 100vw;
+	height: 100vh;
 }
 
 #togglePlayState {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 15px;
-  background-color: #101a3088;
-  z-index: 1000;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 15px;
+	background-color: #101a3088;
+	z-index: 1000;
 }
 
 #gameboard {
-  background-color: #202020;
-  width: 100vw;
-  height: 100vh;
-  z-index: 900;
+	background-color: #202020;
+	width: 100vw;
+	height: 100vh;
+	z-index: 900;
 }
 
 .cell {
-  position: absolute;
-  border-radius: 33%;
-  background-color: #303030;
+	position: absolute;
+	border-radius: 33%;
+	background-color: #303030;
 }
 .cell.alive {
-  background-color: #94a8ff;
+	background-color: #94a8ff;
 }
