--- a/www/src/style.css
+++ b/www/src/style.css
@@ -14,25 +14,17 @@
 	-webkit-text-size-adjust: 100%;
 }
 
-body {
-	margin: 0;
-	display: flex;
-	place-items: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+#game-of-life-canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
 		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
 	}
 }
