--- a/www/src/style.css
+++ b/www/src/style.css
@@ -28,3 +28,18 @@
 		background-color: #ffffff;
 	}
 }
+
+.controls {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	font-size: 4em;
+	display: flex;
+	flex-direction: row;
+	gap: 0.1em;
+}
